--- a/css/style.css
+++ b/css/style.css
@@ -1545,10 +1545,10 @@ About Page
 }
 
 .r-3.about_left::after {
-  left: 10px;
-  bottom: 1px;
+  left: 11px;
+  bottom: -10px;
   transform: rotate(180deg);
-  -webkit-transform: ;
+  -webkit-transform: rotate(180deg);
 }
 
 .modal_vid {
