--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ Nav Style
 */
 
 #main_nav {
-  padding: 20px 0 30px !important;
+  padding: 20px 0 30px;
 }
 
 nav .navbar-toggler {
@@ -252,6 +252,27 @@ nav .get_started:hover {
 .navbar-toggler:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
+}
+
+.menufix {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  animation: smooth 1s !important;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.3);
+  z-index: 3;
+  -webkit-animation: smooth 1s !important;
+}
+
+@keyframes smooth {
+  from {
+    top: -50px;
+  }
+  to {
+    top: 0px;
+  }
 }
 
 /*
