--- a/css/style.css
+++ b/css/style.css
@@ -1649,3 +1649,26 @@ Event Page
 #events .nav .nav-link.active {
   background-color: var(--secondary-color);
 }
+
+/* 
+Back To Top Button
+*/
+
+.b2t_btn {
+  position: fixed;
+  right: 30px;
+  bottom: 20px;
+  cursor: pointer;
+}
+
+.b2t_btn i {
+  font-size: 20px;
+  color: #ffffff;
+  background-color: var(--secondary-color);
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
