--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ Home Banner Style
 }
 
 #banner .banner_content a,
-.about_right a,
+.about_text a,
 .enroll_btn a,
 .join_btn a,
 .r-4 a {
@@ -457,7 +457,7 @@ About Us Style
   margin-top: 55px;
 }
 
-.about_left {
+.about_media {
   position: relative;
 }
 
@@ -467,8 +467,8 @@ About Us Style
   clip-path: polygon(23% 0, 100% 0%, 77% 100%, 0% 100%);
 }
 
-.about_left::before,
-.about_left::after {
+.about_media::before,
+.about_media::after {
   content: "";
   position: absolute;
   height: 3px;
@@ -477,13 +477,13 @@ About Us Style
   background-size: contain;
 }
 
-.about_left::before {
+.about_media::before {
   top: -10px;
   background-image: url(../images/aboutSliderBorderTop.png);
   background-position: left;
 }
 
-.about_left::after {
+.about_media::after {
   bottom: 20px;
   right: 10px;
   background-image: url(../images/aboutSliderBorderBottom.png);
@@ -516,7 +516,7 @@ About Us Style
   border-color: transparent;
 }
 
-.about_right {
+.about_text {
   margin-top: 50px;
 }
 
@@ -1537,7 +1537,7 @@ About Page
   margin-bottom: 100px;
 }
 
-#page_about .about_right {
+#page_about .about_text {
   margin-top: 0;
   padding-left: 15px;
 }
@@ -1555,17 +1555,17 @@ About Page
   margin-bottom: 15px;
 }
 
-.r-3 .about_right {
+.r-3 .about_text {
   padding-left: 0;
   padding-right: 15px;
 }
 
-.r-3.about_left::before {
+.r-3.about_media::before {
   right: 10px;
   transform: rotate(180deg);
 }
 
-.r-3.about_left::after {
+.r-3.about_media::after {
   left: 11px;
   bottom: -10px;
   transform: rotate(180deg);
