--- a/css/responsive.css
+++ b/css/responsive.css
@@ -100,6 +100,12 @@
     text-align: center;
   }
 
+  #banner .banner_content .prime_bg,
+  #banner .banner_content .sec_bg {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
   #banner .slick-track {
     height: 95vh;
   }
